--- a/notebooks/ml/Benchmarks/benchmark.ipynb
+++ b/notebooks/ml/Benchmarks/benchmark.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This notebook can be used to benchmark performance using CPU, a single GPU or many GPUs.\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,10 +109,8 @@
     "    \n",
     "    num_iterations = 5000 # Number of iterations, increase to run longer\n",
     "    \n",
-    "    model = ResNet50(weights=None, input_shape=(height, width, channels), classes=num_classes)\n",
-    "        \n",
-    "    optimizer = tf.train.RMSPropOptimizer(0.2)\n",
-    "    model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
+    "\n",
+    "    log_dir = tensorboard.logdir()\n",
     "    \n",
     "    # Read synthetic data (can be replaced with real data)\n",
     "    def input_fn():\n",
@@ -125,20 +123,51 @@
     "    \n",
     "    tf.keras.backend.set_learning_phase(True)\n",
     "\n",
-    "    # Define DistributionStrategies and convert the Keras Model to an\n",
-    "    # Estimator that utilizes these DistributionStrateges.\n",
-    "    # Evaluator is a single worker, so using MirroredStrategy.\n",
-    "    # Training is automatically distributed on all available GPUs when using MirroredStrategy\n",
-    "    run_config = tf.estimator.RunConfig(\n",
-    "            train_distribute=tf.contrib.distribute.MirroredStrategy())\n",
-    "    keras_estimator = tf.keras.estimator.model_to_estimator(keras_model=model, \n",
-    "               config=run_config, model_dir=tensorboard.logdir())\n",
+    "    \n",
+    "    # Define distribution strategy\n",
+    "    strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
-    "    # Train and evaluate the model. Evaluation will be skipped if there is not an\n",
-    "    # \"evaluator\" job in the cluster.\n",
-    "    tf.estimator.train_and_evaluate(keras_estimator, train_spec=tf.estimator.TrainSpec(input_fn=input_fn),\n",
-    "        eval_spec=tf.estimator.EvalSpec(input_fn=input_fn))\n",
+    "\n",
+    "    with strategy.scope():\n",
+    "        model = ResNet50(weights=None, input_shape=(height, width, channels), classes=num_classes)\n",
+    "\n",
+    "        optimizer = tf.keras.optimizers.RMSprop(0.2)\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
+    "\n",
+    "\n",
+    "    callbacks = [\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=log_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=log_dir),\n",
+    "    ]\n",
+    "    model.fit(input_fn(), \n",
+    "        verbose=0,\n",
+    "        epochs=3, \n",
+    "        steps_per_epoch=5,\n",
+    "        validation_data=input_fn(),\n",
+    "        callbacks=callbacks\n",
+    "    )\n",
+    "    model.evaluate(input_fn())\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0163_3', {'metric': None, 'log': 'Experiments/application_1594231828166_0163_3/output.log'})"
+     ]
+    }
+   ],
+   "source": [
+    "from hops import experiment\n",
+    "experiment.launch(wrapper, local_logdir=True)"
    ]
   },
   {
@@ -146,26 +175,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from hops import experiment\n",
-    "experiment.launch(wrapper, local_logdir=True)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
