--- a/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_simulated_data_example.ipynb
+++ b/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_simulated_data_example.ipynb
@@ -7,7 +7,7 @@
     "# MultiWorkerMirroredStrategy on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
@@ -80,57 +80,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0182_2', {'accuracy': 0.375, 'log': 'Experiments/application_1594231828166_0182_2/chief_0_output.log'})"
+     ]
+    }
+   ],
    "source": [
-    "def mirrored_training():\n",
+    "def multi_worker_mirrored_training():\n",
     "\n",
     "    import sys\n",
+    "    \n",
     "    import numpy as np\n",
     "    import tensorflow as tf\n",
     "    \n",
     "    from hops import tensorboard\n",
     "    from hops import devices\n",
     "\n",
+    "    model_dir = tensorboard.logdir()\n",
+    "    print('Using %s to store checkpoints.' % model_dir)\n",
+    "    \n",
+    "    # Define distribution strategy\n",
+    "    strategy = tf.distribute.experimental.MultiWorkerMirroredStrategy(communication=tf.distribute.experimental.CollectiveCommunication.NCCL)\n",
+    "\n",
+    "    # Define per device batch size\n",
+    "    batch_size_per_replica = 32\n",
+    "    # Define global batch size    \n",
+    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
+    "    \n",
+    "    # Define model hyper parameters\n",
+    "    epochs=30 \n",
+    "    steps_per_epoch=5\n",
+    "    validation_steps=2          \n",
+    "    \n",
+    "    shuffle_size = batch_size * 4\n",
+    "    \n",
     "    def input_fn():\n",
     "      x = np.random.random((1024, 10))\n",
     "      y = np.random.randint(2, size=(1024, 1))\n",
     "      x = tf.cast(x, tf.float32)\n",
+    "    \n",
     "      dataset = tf.data.Dataset.from_tensor_slices((x, y))\n",
     "      dataset = dataset.repeat(500)\n",
-    "      dataset = dataset.batch(32)\n",
+    "      dataset = dataset.batch(batch_size)\n",
+    "        \n",
     "      return dataset\n",
     "\n",
-    "    model_dir = tensorboard.logdir()\n",
-    "    print('Using %s to store checkpoints.' % model_dir)\n",
     "\n",
-    "    # Define a Keras Model.\n",
-    "    model = tf.keras.Sequential()\n",
-    "    model.add(tf.keras.layers.Dense(16, activation='relu', input_shape=(10,)))\n",
-    "    model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
+    "    with strategy.scope():\n",
+    "        # Define a Keras Model.\n",
+    "        model = tf.keras.Sequential()\n",
+    "        model.add(tf.keras.layers.Dense(16, activation='relu', input_shape=(10,)))\n",
+    "        model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
     "\n",
-    "    # Compile the model.\n",
-    "    optimizer = tf.train.GradientDescentOptimizer(0.2)\n",
-    "    model.compile(loss='binary_crossentropy', optimizer=optimizer)\n",
-    "    model.summary()\n",
-    "    tf.keras.backend.set_learning_phase(True)\n",
-    "\n",
-    "    # Define DistributionStrategies and convert the Keras Model to an\n",
-    "    # Estimator that utilizes these DistributionStrateges.\n",
-    "    # Evaluator is a single worker, so using MultiWorkerMirroredStrategy.\n",
-    "    run_config = tf.estimator.RunConfig(\n",
-    "            train_distribute=tf.distribute.experimental.MultiWorkerMirroredStrategy())\n",
-    "    keras_estimator = tf.keras.estimator.model_to_estimator(keras_model=model, config=run_config, model_dir=model_dir)\n",
-    "\n",
-    "    # Train and evaluate the model. Evaluation will be skipped if there is not an\n",
-    "    # \"evaluator\" job in the cluster.\n",
-    "    tf.estimator.train_and_evaluate(keras_estimator, train_spec=tf.estimator.TrainSpec(input_fn=input_fn),\n",
-    "        eval_spec=tf.estimator.EvalSpec(input_fn=input_fn))\n",
+    "        # Compile the model.\n",
+    "        model.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "                      optimizer=tf.keras.optimizers.Adam(),\n",
+    "                      metrics=['accuracy']\n",
+    "                     )\n",
+    "        \n",
+    "    callbacks = [\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=model_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
+    "    ]\n",
     "    \n",
+    "    model.fit(input_fn(), \n",
+    "        verbose=0, \n",
+    "        epochs=epochs, \n",
+    "        steps_per_epoch=steps_per_epoch,\n",
+    "        validation_data=input_fn(),\n",
+    "        validation_steps=validation_steps,      \n",
+    "        callbacks=callbacks\n",
+    "    )\n",
+    "    \n",
+    "    score =  model.evaluate(input_fn(), steps=1)\n",
+    "\n",
+    "    metrics = {'accuracy': score[1]}\n",
+    "\n",
+    "    return metrics    \n",
+    "\n",
     "from hops import experiment\n",
-    "experiment.mirrored(mirrored_training)"
+    "experiment.mirrored(multi_worker_mirrored_training,  name='random data model', local_logdir=True, metric_key='accuracy')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
