--- a/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
+++ b/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keras example with differential evolution\n",
+    "# Tensorflow Keras example with SavedModel model saving\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "</a></h1> \n",
     "</p>\n",
     "\n",
-    "![hops.png](../../../images/hops.png)\n",
+    "![hops.png](../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
@@ -80,31 +80,34 @@
     "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
     "<br>\n",
     "<br>\n",
-    "![Image7-Monitor.png](../../../images/experiments.gif)"
+    "![Image7-Monitor.png](../../images/experiments.gif)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def keras(kernel, pool, dropout):\n",
-    "    from tensorflow.python import keras\n",
+    "def keras_mnist():\n",
+    "    from tensorflow import keras\n",
     "    import tensorflow as tf\n",
-    "    from tensorflow.python.keras.datasets import mnist\n",
-    "    from tensorflow.python.keras.models import Sequential\n",
-    "    from tensorflow.python.keras.layers import Dense, Dropout, Flatten\n",
-    "    from tensorflow.python.keras.layers import Conv2D, MaxPooling2D\n",
-    "    from tensorflow.python.keras.callbacks import TensorBoard\n",
+    "    from tensorflow.keras.datasets import mnist\n",
+    "    from tensorflow.keras.models import Sequential\n",
+    "    from tensorflow.keras.layers import Dense, Dropout, Flatten\n",
+    "    from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+    "    from tensorflow.keras.callbacks import TensorBoard\n",
+    "    from tensorflow.keras import backend as K\n",
     "\n",
-    "    from tensorflow.python.keras import backend as K\n",
     "    import math\n",
     "    from hops import tensorboard\n",
     "\n",
-    "    batch_size = 32\n",
+    "    batch_size = 8\n",
     "    num_classes = 10\n",
-    "    epochs = 2\n",
+    "    epochs = 3\n",
+    "    kernel = 4\n",
+    "    pool = 4\n",
+    "    dropout = 0.5\n",
     "\n",
     "    # Input image dimensions\n",
     "    img_rows, img_cols = 28, 28\n",
@@ -135,8 +138,8 @@
     "\n",
     "    model = Sequential()\n",
     "    model.add(Conv2D(32, kernel_size=(kernel, kernel),\n",
-    "                     activation='relu',\n",
-    "                     input_shape=input_shape))\n",
+    "                        activation='relu',\n",
+    "                         input_shape=input_shape))\n",
     "    model.add(Conv2D(64, (kernel, kernel), activation='relu'))\n",
     "    model.add(MaxPooling2D(pool_size=(pool, pool)))\n",
     "    model.add(Dropout(dropout))\n",
@@ -148,24 +151,57 @@
     "    opt = keras.optimizers.Adadelta(1.0)\n",
     "\n",
     "    model.compile(loss=keras.losses.categorical_crossentropy,\n",
-    "                  optimizer=opt,\n",
-    "                  metrics=['accuracy'])\n",
+    "                      optimizer=opt,\n",
+    "                      metrics=['accuracy'])\n",
     "\n",
     "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
-    "                          write_graph=True, write_images=True)\n",
+    "                             write_graph=True, write_images=True)\n",
     "    callbacks = [tb_callback]\n",
-    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5'))\n",
     "\n",
     "    model.fit(x_train, y_train,\n",
-    "              batch_size=batch_size,\n",
-    "              callbacks=callbacks,\n",
-    "              epochs=epochs,\n",
-    "              verbose=1,\n",
-    "              validation_data=(x_test, y_test))\n",
+    "             batch_size=batch_size,\n",
+    "             callbacks=callbacks,\n",
+    "             epochs=epochs,\n",
+    "             verbose=1,\n",
+    "             validation_data=(x_test, y_test))\n",
     "    score = model.evaluate(x_test, y_test, verbose=0)\n",
-    "    print('Test loss:', score[0])\n",
-    "    print('Test accuracy:', score[1])\n",
-    "    return {'accuracy': score[1], 'loss': score[0]}\n"
+    "\n",
+    "    # Export model as savedModel\n",
+    "    export_path = tensorboard.logdir() + \"/SavedModel\"\n",
+    "\n",
+    "    tf.keras.models.save_model(\n",
+    "        model,\n",
+    "        export_path,\n",
+    "        overwrite=True,\n",
+    "        include_optimizer=True,\n",
+    "        save_format=None,\n",
+    "        signatures=None,\n",
+    "        options=None\n",
+    "    )\n",
+    "    \n",
+    "    return {'accuracy': score[1], 'loss': score[0]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0164_3', {'accuracy': 0.9853000044822693, 'loss': 0.04326099157333374, 'log': 'Experiments/application_1594231828166_0164_3/output.log'})"
+     ]
+    }
+   ],
+   "source": [
+    "from hops import experiment\n",
+    "from hops import hdfs\n",
+    "\n",
+    "experiment.launch(keras_mnist, name='keras mnist', local_logdir=True, metric_key='accuracy')"
    ]
   },
   {
@@ -173,29 +209,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from hops import experiment\n",
-    "search_dict = {'kernel': [2,8], 'pool': [2,8], 'dropout': [0.01, 0.99]}\n",
-    "# local_logdir starts the TensorBoard with a logdir on the local filesystem.\n",
-    "# when the job is finished the contents of the logdir will be put automatically in your project\n",
-    "experiment.differential_evolution(keras, search_dict, name='keras mnist diff evo', local_logdir=True, optimization_key='accuracy')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
