--- a/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
+++ b/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "We are using Keras for this example to build the model.\n",
     "\n",
-    "This notebook has been tested with TensorFlow 1.15.0 and Hopsworks 1.3.\n",
+    "This notebook has been tested with TensorFlow 2.2.0 and Hopsworks 1.3.\n",
     "Requires Python 3.6 or higher."
    ]
   },
@@ -53,7 +53,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>144</td><td>application_1586968115220_0042</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1586968115220_0042/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-23-67.eu-north-1.compute.internal:8042/node/containerlogs/container_e09_1586968115220_0042_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>70</td><td>application_1594231828166_0157</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0157/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0157_01_000001/demo__davit000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,11 +163,11 @@
     "### maggy: hyperparameters as arguments and including the reporter\n",
     "#########\n",
     "def training_function(kernel, pool, dropout, reporter):\n",
-    "    from tensorflow import keras\n",
     "    import tensorflow as tf\n",
+    "    from tensorflow import keras\n",
     "    from tensorflow.keras.models import Sequential\n",
     "    from tensorflow.keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D\n",
-    "    from tensorflow.python.keras.callbacks import TensorBoard\n",
+    "    from tensorflow.keras.callbacks import TensorBoard\n",
     "    \n",
     "    from maggy import tensorboard\n",
     "    from hops import hdfs\n",
@@ -188,13 +188,13 @@
     "\n",
     "        def parser(serialized_example):\n",
     "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
-    "            features = tf.parse_single_example(\n",
+    "            features = tf.io.parse_single_example(\n",
     "                serialized_example,\n",
     "                features={\n",
-    "                    'image_raw': tf.FixedLenFeature([], tf.string),\n",
-    "                    'label': tf.FixedLenFeature([], tf.int64),\n",
+    "                    'image_raw': tf.io.FixedLenFeature([], tf.string),\n",
+    "                    'label': tf.io.FixedLenFeature([], tf.int64),\n",
     "                })\n",
-    "            image = tf.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image = tf.io.decode_raw(features['image_raw'], tf.uint8)\n",
     "            image.set_shape([28 * 28])\n",
     "\n",
     "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
@@ -250,7 +250,7 @@
     "    #########\n",
     "    ### maggy: REPORTER API through keras callback\n",
     "    #########\n",
-    "    callbacks = [KerasBatchEnd(reporter, metric='acc'), tb_callback]\n",
+    "    callbacks = [KerasBatchEnd(reporter, metric='accuracy'), tb_callback]\n",
     "    \n",
     "    # Initialize the datasets\n",
     "    train_input, num_train = data_input(train_filenames[0], batch_size=batch_size)\n",
@@ -299,9 +299,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a438155ad39454a9380fe93ae7f12ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Maggy experiment', max=15.0, style=ProgressStyle(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: Epoch 1/10\n",
+      "0: \n",
+      "0: \n",
+      "0: \n",
+      "0: \n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 0.3839288353919983\n",
+      "0: Test accuracy: 0.8585069179534912\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 0.35082095861434937\n",
+      "0: Test accuracy: 0.8669704794883728\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 1.6520566940307617\n",
+      "0: Test accuracy: 0.5049912929534912\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 0.2847115993499756\n",
+      "0: Test accuracy: 0.8956162929534912\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 0.2887480854988098\n",
+      "0: Test accuracy: 0.8914930820465088\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 0.35841038823127747\n",
+      "0: Test accuracy: 0.8643662929534912\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 0.258556067943573\n",
+      "0: Test accuracy: 0.9055989384651184\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 0.24740640819072723\n",
+      "0: Test accuracy: 0.9088541865348816\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 0.30597394704818726\n",
+      "0: Test accuracy: 0.8871527910232544\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n",
+      "0: Epoch 3/10\n",
+      "0: Epoch 4/10\n",
+      "0: Epoch 5/10\n",
+      "0: Epoch 6/10\n",
+      "0: Epoch 7/10\n",
+      "0: Epoch 8/10\n",
+      "0: Epoch 9/10\n",
+      "0: Epoch 10/10\n",
+      "0: Test loss: 0.28581172227859497\n",
+      "0: Test accuracy: 0.8962673544883728\n",
+      "0: Epoch 1/10\n",
+      "0: Epoch 2/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "An error was encountered:\n",
+      "Could not create experiment (url: /hopsworks-api/api/project/128/experiments/application_1594231828166_0157_3?xattr=REPLACE), server response: \n",
+      " HTTP code: 401, HTTP reason: Unauthorized, error code: 200003, error msg: The Token has expired on Tue Jul 14 20:31:14 CEST 2020., user msg: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/maggy/experiment.py\", line 239, in lagom\n",
+      "    optimization_key,\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/maggy/util.py\", line 121, in _finalize_experiment\n",
+      "    app_id, run_id, experiment_json, \"REPLACE\"\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/hops/experiment_impl/util/experiment_utils.py\", line 455, in _attach_experiment_xattr\n",
+      "    resource_url, response.status_code, response.reason, error_code, error_msg, user_msg))\n",
+      "hops.exceptions.RestAPIError: Could not create experiment (url: /hopsworks-api/api/project/128/experiments/application_1594231828166_0157_3?xattr=REPLACE), server response: \n",
+      " HTTP code: 401, HTTP reason: Unauthorized, error code: 200003, error msg: The Token has expired on Tue Jul 14 20:31:14 CEST 2020., user msg: \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "result = experiment.lagom(map_fun=training_function, \n",
     "                           searchspace=sp, \n",
@@ -336,7 +517,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
