--- a/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
+++ b/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
@@ -7,14 +7,14 @@
     "# MultiWorkerMirroredStrategy on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 2.2.0_rc2</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
     "</a></h1> \n",
     "</p>\n",
     "\n",
-    "![hops.png](../../../images/hops.png)\n",
+    "![hops.png](../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
@@ -75,39 +75,21 @@
     "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
     "<br>\n",
     "<br>\n",
-    "![Image7-Monitor.png](../../../images/experiments.gif)"
+    "![Image7-Monitor.png](../../images/experiments.gif)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1586507110993_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://gpu.c.dpe-cloud-mle.internal:8088/proxy/application_1586507110993_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://gpu.c.dpe-cloud-mle.internal:8042/node/containerlogs/container_e01_1586507110993_0003_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0177_4', {'accuracy': 0.828125, 'log': 'Experiments/application_1594231828166_0177_4/chief_0_output.log'})"
      ]
     }
    ],
@@ -115,68 +97,127 @@
     "def mirrored_training():\n",
     "\n",
     "    import sys\n",
+    "    \n",
     "    import numpy as np\n",
     "    import tensorflow as tf\n",
     "    \n",
     "    from hops import tensorboard\n",
     "    from hops import devices\n",
+    "    from hops import hdfs\n",
+    "    \n",
+    "    import pydoop.hdfs as pydoop\n",
+    "    \n",
+    "    log_dir = tensorboard.logdir()\n",
     "    \n",
     "    # Define distribution strategy\n",
     "    strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "    # Define per device batch size\n",
+    "    batch_size_per_replica = 32\n",
     "    \n",
-    "    # TODO (davit). this is copy from tf tutorial may be batch size 32?\n",
-    "    BATCH_SIZE_PER_REPLICA = 32\n",
-    "    BATCH_SIZE = BATCH_SIZE_PER_REPLICA * strategy.num_replicas_in_sync\n",
+    "    # Define global batch size\n",
+    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
+    "        \n",
+    "    # Define model hyper parameters\n",
+    "    epochs = 10\n",
+    "    steps_per_epoch = 5\n",
+    "    validation_steps = 2\n",
+    "    \n",
+    "    kernel = 2\n",
+    "    pool = 2\n",
+    "    dropout = 0.01\n",
     "\n",
-    "    def input_fn():\n",
-    "      x = np.random.random((1024, 10))\n",
-    "      y = np.random.randint(2, size=(1024, 1))\n",
-    "      x = tf.cast(x, tf.float32)\n",
-    "      dataset = tf.data.Dataset.from_tensor_slices((x, y))\n",
-    "      dataset = dataset.repeat(500)\n",
-    "      dataset = dataset.batch(BATCH_SIZE)\n",
-    "      return dataset\n",
+    "    num_classes = 10\n",
+    "    \n",
+    "    # Input image dimensions\n",
+    "    img_rows, img_cols = 28, 28\n",
+    "    input_shape = (28, 28, 1)\n",
+    "    \n",
+    "    \n",
+    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
+    "    \n",
+    "    # Create an iterator over the dataset\n",
+    "    def data_input(filenames, batch_size=128, shuffle=False, repeat=None):\n",
     "\n",
-    "    model_dir = tensorboard.logdir()\n",
-    "    print('Using %s to store checkpoints.' % model_dir)\n",
+    "        def parser(serialized_example):\n",
+    "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
+    "            features = tf.io.parse_single_example(\n",
+    "                serialized_example,\n",
+    "                features={\n",
+    "                    'image_raw': tf.io.FixedLenFeature([], tf.string),\n",
+    "                    'label': tf.io.FixedLenFeature([], tf.int64),\n",
+    "                })\n",
+    "            image = tf.io.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([28 * 28])\n",
     "\n",
+    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
+    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
+    "            label = tf.cast(features['label'], tf.int32)\n",
+    "            # Reshape the tensor\n",
+    "            image = tf.reshape(image, [img_rows, img_cols, 1])\n",
+    "    \n",
+    "            # Create a one hot array for your labels\n",
+    "            label = tf.one_hot(label, num_classes)\n",
+    "            \n",
+    "            return image, label\n",
+    "\n",
+    "        # Import MNIST data\n",
+    "        dataset = tf.data.TFRecordDataset(filenames)\n",
+    "\n",
+    "        # Map the parser over dataset, and batch results by up to batch_size\n",
+    "        dataset = dataset.map(parser)\n",
+    "        if shuffle:\n",
+    "            dataset = dataset.shuffle(buffer_size=128)\n",
+    "        dataset = dataset.batch(batch_size, drop_remainder=True)\n",
+    "        dataset = dataset.repeat(repeat)\n",
+    "        return dataset\n",
+    "    \n",
+    "    # construct model under distribution strategy scope\n",
     "    with strategy.scope():\n",
-    "        # Define a Keras Model.\n",
+    "        \n",
     "        model = tf.keras.Sequential()\n",
-    "        model.add(tf.keras.layers.Dense(16, activation='relu', input_shape=(10,)))\n",
-    "        model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
+    "        model.add(tf.keras.layers.Conv2D(32, kernel_size=(kernel, kernel),\n",
+    "                         activation='relu',\n",
+    "                         input_shape=input_shape))\n",
+    "        model.add(tf.keras.layers.Conv2D(64, (kernel, kernel), activation='relu'))\n",
+    "        model.add(tf.keras.layers.MaxPooling2D(pool_size=(pool, pool)))\n",
+    "        model.add(tf.keras.layers.Dropout(dropout))\n",
+    "        model.add(tf.keras.layers.Flatten())\n",
+    "        model.add(tf.keras.layers.Dense(128, activation='relu'))\n",
+    "        model.add(tf.keras.layers.Dropout(dropout))\n",
+    "        model.add(tf.keras.layers.Dense(num_classes, activation='softmax'))\n",
     "\n",
-    "        # Compile the model.\n",
-    "        optimizer = tf.keras.optimizers.Adam(0.001) \n",
-    "        # Compile the model.\n",
-    "        model.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
-    "                      optimizer=tf.keras.optimizers.Adam(),\n",
-    "                      metrics=['accuracy']\n",
-    "                     )\n",
+    "        opt = tf.keras.optimizers.Adadelta(1.0)\n",
+    "\n",
+    "        model.compile(loss=tf.keras.losses.categorical_crossentropy,\n",
+    "                      optimizer=opt,\n",
+    "                      metrics=['accuracy'])\n",
+    "        \n",
     "        \n",
     "    callbacks = [\n",
-    "        tf.keras.callbacks.TensorBoard(log_dir=model_dir),\n",
-    "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=log_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=log_dir),\n",
     "    ]\n",
-    "    model.fit(input_fn(), \n",
-    "        verbose=0,\n",
-    "        epochs=3, \n",
-    "        steps_per_epoch=5,\n",
-    "        validation_data=input_fn(),\n",
+    "    \n",
+    "    model.fit(data_input(train_filenames, batch_size), \n",
+    "        verbose=0, \n",
+    "        epochs=epochs, \n",
+    "        steps_per_epoch=steps_per_epoch,\n",
+    "        validation_data=data_input(validation_filenames, batch_size),\n",
+    "        validation_steps=validation_steps,      \n",
     "        callbacks=callbacks\n",
     "    )\n",
-    "    return model.evaluate(input_fn())\n",
+    "    \n",
+    "    score = model.evaluate(data_input(validation_filenames, batch_size), steps=1)\n",
+    "    metrics = {'accuracy': score[1]}\n",
     "\n",
+    "    return metrics    \n",
+    "\n",
+    "    \n",
     "from hops import experiment\n",
-    "experiment.mirrored(mirrored_training)"
+    "experiment.mirrored(mirrored_training,  name='mnist model', local_logdir=True, metric_key='accuracy')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -189,17 +230,17 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
