--- a/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_simulated_data_example.ipynb
+++ b/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_simulated_data_example.ipynb
@@ -4,16 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keras example with h5py model saving\n",
+    "# MultiWorkerMirroredStrategy on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
+    "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
     "</a></h1> \n",
@@ -85,88 +80,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>93</td><td>application_1594231828166_0180</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0180/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0180_01_000001/demo__davit000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n",
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0180_1', {'accuracy': 0.640625, 'log': 'Experiments/application_1594231828166_0180_1/chief_0_output.log'})"
+     ]
+    }
+   ],
    "source": [
-    "def keras_mnist():\n",
-    "    from tensorflow.python import keras\n",
+    "def mirrored_training():\n",
+    "\n",
+    "    import sys\n",
+    "    import numpy as np\n",
     "    import tensorflow as tf\n",
-    "    from tensorflow.python.keras.datasets import mnist\n",
-    "    from tensorflow.python.keras.models import Sequential\n",
-    "    from tensorflow.python.keras.layers import Dense, Dropout, Flatten\n",
-    "    from tensorflow.python.keras.layers import Conv2D, MaxPooling2D\n",
-    "    from tensorflow.python.keras.callbacks import TensorBoard\n",
-    "    from tensorflow.python.keras import backend as K\n",
-    "\n",
-    "    import math\n",
+    "    \n",
     "    from hops import tensorboard\n",
+    "    from hops import devices\n",
     "\n",
-    "    batch_size = 8\n",
-    "    num_classes = 10\n",
-    "    epochs = 3\n",
-    "    kernel = 4\n",
-    "    pool = 4\n",
-    "    dropout = 0.5\n",
+    "    model_dir = tensorboard.logdir()\n",
+    "    print('Using %s to store checkpoints.' % model_dir)\n",
+    "    \n",
+    "    # Define distribution strategy\n",
+    "    strategy = tf.distribute.MirroredStrategy()\n",
+    "    \n",
+    "    # Define per device batch size\n",
+    "    BATCH_SIZE_PER_REPLICA = 32\n",
+    "    \n",
+    "    # Define global batch size\n",
+    "    BATCH_SIZE = BATCH_SIZE_PER_REPLICA * strategy.num_replicas_in_sync\n",
     "\n",
-    "    # Input image dimensions\n",
-    "    img_rows, img_cols = 28, 28\n",
+    "    # Define input function\n",
+    "    def input_fn():\n",
+    "      x = np.random.random((1024, 10))\n",
+    "      y = np.random.randint(2, size=(1024, 1))\n",
+    "      x = tf.cast(x, tf.float32)\n",
+    "      dataset = tf.data.Dataset.from_tensor_slices((x, y))\n",
+    "      dataset = dataset.repeat(500)\n",
+    "      dataset = dataset.batch(BATCH_SIZE)\n",
+    "      return dataset\n",
     "\n",
-    "    # The data, shuffled and split between train and test sets\n",
-    "    (x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "    # construct model under distribution strategy scope\n",
+    "    with strategy.scope():\n",
+    "        # Define a Keras Model.\n",
+    "        model = tf.keras.Sequential()\n",
+    "        model.add(tf.keras.layers.Dense(16, activation='relu', input_shape=(10,)))\n",
+    "        model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
     "\n",
-    "    if K.image_data_format() == 'channels_first':\n",
-    "        x_train = x_train.reshape(x_train.shape[0], 1, img_rows, img_cols)\n",
-    "        x_test = x_test.reshape(x_test.shape[0], 1, img_rows, img_cols)\n",
-    "        input_shape = (1, img_rows, img_cols)\n",
-    "    else:\n",
-    "        x_train = x_train.reshape(x_train.shape[0], img_rows, img_cols, 1)\n",
-    "        x_test = x_test.reshape(x_test.shape[0], img_rows, img_cols, 1)\n",
-    "        input_shape = (img_rows, img_cols, 1)\n",
+    "        # Compile the model.\n",
+    "        model.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "                      optimizer=tf.keras.optimizers.Adam(0.001),\n",
+    "                      metrics=['accuracy']\n",
+    "                     )\n",
+    "        \n",
+    "    callbacks = [\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=model_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
+    "    ]\n",
+    "    model.fit(input_fn(), \n",
+    "        verbose=0,\n",
+    "        epochs=3, \n",
+    "        steps_per_epoch=5,\n",
+    "        validation_data=input_fn(),\n",
+    "        callbacks=callbacks\n",
+    "    )\n",
     "\n",
-    "    x_train = x_train.astype('float32')\n",
-    "    x_test = x_test.astype('float32')\n",
-    "    x_train /= 255\n",
-    "    x_test /= 255\n",
-    "    print('x_train shape:', x_train.shape)\n",
-    "    print(x_train.shape[0], 'train samples')\n",
-    "    print(x_test.shape[0], 'test samples')\n",
+    "    score = model.evaluate(input_fn(), steps=1)\n",
+    "    metrics = {'accuracy': score[1]}\n",
     "\n",
-    "    # Convert class vectors to binary class matrices\n",
-    "    y_train = keras.utils.to_categorical(y_train, num_classes)\n",
-    "    y_test = keras.utils.to_categorical(y_test, num_classes)\n",
+    "    return metrics    \n",
     "\n",
-    "    model = Sequential()\n",
-    "    model.add(Conv2D(32, kernel_size=(kernel, kernel),\n",
-    "                        activation='relu',\n",
-    "                         input_shape=input_shape))\n",
-    "    model.add(Conv2D(64, (kernel, kernel), activation='relu'))\n",
-    "    model.add(MaxPooling2D(pool_size=(pool, pool)))\n",
-    "    model.add(Dropout(dropout))\n",
-    "    model.add(Flatten())\n",
-    "    model.add(Dense(128, activation='relu'))\n",
-    "    model.add(Dropout(dropout))\n",
-    "    model.add(Dense(num_classes, activation='softmax'))\n",
-    "\n",
-    "    opt = keras.optimizers.Adadelta(1.0)\n",
-    "\n",
-    "    model.compile(loss=keras.losses.categorical_crossentropy,\n",
-    "                      optimizer=opt,\n",
-    "                      metrics=['accuracy'])\n",
-    "\n",
-    "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
-    "                             write_graph=True, write_images=True)\n",
-    "    callbacks = [tb_callback]\n",
-    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5'))\n",
-    "\n",
-    "    model.fit(x_train, y_train,\n",
-    "             batch_size=batch_size,\n",
-    "             callbacks=callbacks,\n",
-    "             epochs=epochs,\n",
-    "             verbose=1,\n",
-    "             validation_data=(x_test, y_test))\n",
-    "    score = model.evaluate(x_test, y_test, verbose=0)\n",
-    "    return {'accuracy': score[1], 'loss': score[0]}"
+    "from hops import experiment\n",
+    "experiment.mirrored(mirrored_training,  name='random data model', local_logdir=True, metric_key='accuracy')"
    ]
   },
   {
@@ -174,12 +185,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from hops import experiment\n",
-    "from hops import hdfs\n",
-    "\n",
-    "experiment.launch(keras_mnist, name='keras mnist', local_logdir=True, metric_key='accuracy')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -192,17 +198,17 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
