--- a/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/evolutionary_search_mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/evolutionary_search_mnist.ipynb
@@ -7,7 +7,7 @@
     "## Tensorflow 2 Keras example with differential evolution on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 2.2.0_rc2</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
@@ -153,9 +153,6 @@
     "      # Map the parser over dataset, and batch results by up to batch_size\n",
     "      dataset = dataset.map(_parser, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
     "        \n",
-    "#      dataset = dataset.map(\n",
-    "#        _normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
-    "\n",
     "        \n",
     "      dataset = dataset.map(\n",
     "        _reshape_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
@@ -166,7 +163,6 @@
     "      dataset = dataset.batch(batch_size)   \n",
     "  \n",
     "      dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
-    "  #    dataset = strategy.experimental_distribute_dataset(dataset)         \n",
     "\n",
     "      return dataset\n",
     "    \n",
@@ -253,18 +249,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
-   "name": "pysparkkernel"
+   "display_name": "Python",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
-    "version": 2
+    "name": "ipython",
+    "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python2"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
