--- a/notebooks/ml/Parallel_Experiments/TensorFlow/grid_search/grid_search_fashion_mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/TensorFlow/grid_search/grid_search_fashion_mnist.ipynb
@@ -7,7 +7,7 @@
     "# Getting started: Fashion Mnist on Hops Notebook\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>"
    ]
   },
   {
@@ -101,183 +101,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def wrapper(learning_rate, dropout):\n",
     "\n",
-    "    import tensorflow as tf\n",
+    "    import sys\n",
+    "    \n",
     "    import numpy as np\n",
+    "    import tensorflow as tf\n",
+    "    \n",
     "    from hops import tensorboard\n",
+    "    from hops import devices\n",
     "    from hops import hdfs\n",
     "    \n",
-    "    # Training Parameters\n",
-    "    num_steps = 30\n",
-    "    batch_size = 8\n",
+    "    import pydoop.hdfs as pydoop\n",
     "    \n",
-    "    # Network Parameters\n",
-    "    num_input = 784 # MNIST data input (img shape: 28*28)\n",
-    "    num_classes = 10 # MNIST total classes (0-9 digits)\n",
+    "    data_dir = hdfs.project_path()\n",
+    "    train_filenames = pydoop.path.abspath(data_dir + \"TourData/mnist/train/df-mnist_train.tfrecord\")\n",
+    "    train_filenames = tf.io.gfile.glob(train_filenames + \"/part-r-*\")\n",
+    "    validation_filenames = pydoop.path.abspath(data_dir + \"TourData/mnist/train/df-mnist_train.tfrecord\")\n",
+    "    validation_filenames = tf.io.gfile.glob(validation_filenames + \"/part-r-*\")\n",
+    "    \n",
+    "    \n",
+    "    epochs=30 \n",
+    "    steps_per_epoch=5\n",
+    "    validation_steps=2          \n",
+    "    \n",
+    "    batch_size = 32\n",
+    "    shuffle_size = batch_size * 4\n",
+    "    \n",
+    "    num_classes = 10\n",
+    "    kernel = 3\n",
+    "    pool = 2\n",
+    "    \n",
+    "    # Input image dimensions\n",
+    "    img_rows, img_cols = 28, 28\n",
+    "    input_shape = (img_rows, img_cols, 1)\n",
     "\n",
-    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
-    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
-    "\n",
-    "    # Create the neural network\n",
-    "    # TF Estimator input is a dict, in case of multiple inputs\n",
-    "    def conv_net(x, n_classes, dropout, reuse, is_training):\n",
-    "\n",
-    "        # Define a scope for reusing the variables\n",
-    "        with tf.variable_scope('ConvNet', reuse=reuse):\n",
-    "\n",
-    "            # MNIST data input is a 1-D vector of 784 features (28*28 pixels)\n",
-    "            # Reshape to match picture format [Height x Width x Channel]\n",
-    "            # Tensor input become 4-D: [Batch Size, Height, Width, Channel]\n",
-    "            x = tf.reshape(x, shape=[-1, 28, 28, 1])\n",
-    "\n",
-    "            # Convolution Layer with 32 filters and a kernel size of 5\n",
-    "            conv1 = tf.layers.conv2d(x, 32, 5, activation=tf.nn.relu)\n",
-    "            # Max Pooling (down-sampling) with strides of 2 and kernel size of 2\n",
-    "            conv1 = tf.layers.max_pooling2d(conv1, 2, 2)\n",
-    "\n",
-    "            # Convolution Layer with 32 filters and a kernel size of 5\n",
-    "            conv2 = tf.layers.conv2d(conv1, 64, 3, activation=tf.nn.relu)\n",
-    "            # Max Pooling (down-sampling) with strides of 2 and kernel size of 2\n",
-    "            conv2 = tf.layers.max_pooling2d(conv2, 2, 2)\n",
-    "\n",
-    "            # Flatten the data to a 1-D vector for the fully connected layer\n",
-    "            fc1 = tf.contrib.layers.flatten(conv2)\n",
-    "\n",
-    "            # Fully connected layer (in tf contrib folder for now)\n",
-    "            fc1 = tf.layers.dense(fc1, 1024)\n",
-    "            # Apply Dropout (if is_training is False, dropout is not applied)\n",
-    "            fc1 = tf.layers.dropout(fc1, rate=dropout, training=is_training)\n",
-    "\n",
-    "            # Output layer, class prediction\n",
-    "            out = tf.layers.dense(fc1, n_classes)\n",
-    "\n",
-    "        return out\n",
-    "\n",
-    "\n",
-    "    # Define the model function (following TF Estimator Template)\n",
-    "    def model_fn(features, labels, mode, params):\n",
-    "\n",
-    "        # Build the neural network\n",
-    "        # Because Dropout have different behavior at training and prediction time, we\n",
-    "        # need to create 2 distinct computation graphs that still share the same weights.\n",
-    "        logits_train = conv_net(features, num_classes, dropout, reuse=False, is_training=True)\n",
-    "        logits_test = conv_net(features, num_classes, dropout, reuse=True, is_training=False)\n",
-    "\n",
-    "        # Predictions\n",
-    "        pred_classes = tf.argmax(logits_test, axis=1)\n",
-    "        pred_probas = tf.nn.softmax(logits_test)\n",
-    "\n",
-    "        # If prediction mode, early return\n",
-    "        if mode == tf.estimator.ModeKeys.PREDICT:\n",
-    "            return tf.estimator.EstimatorSpec(mode, predictions=pred_classes)\n",
-    "\n",
-    "        # Define loss and optimizer\n",
-    "        loss_op = tf.reduce_mean(tf.nn.sparse_softmax_cross_entropy_with_logits(logits=logits_train, \n",
-    "                                                                                labels=tf.cast(labels, dtype=tf.int32)))\n",
-    "        \n",
-    "        optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
-    "        train_op = optimizer.minimize(loss_op, global_step=tf.train.get_global_step())\n",
-    "\n",
-    "        # Evaluate the accuracy of the model\n",
-    "        acc_op = tf.metrics.accuracy(labels=labels, predictions=pred_classes)\n",
-    "\n",
-    "        image = tf.reshape(features[:10], [-1, 28, 28, 1])\n",
-    "        tf.summary.image(\"image\", image)\n",
-    "\n",
-    "        # TF Estimators requires to return a EstimatorSpec, that specify\n",
-    "        # the different ops for training, evaluating, ...\n",
-    "        estim_specs = tf.estimator.EstimatorSpec(\n",
-    "          mode=mode,\n",
-    "          predictions=pred_classes,\n",
-    "          loss=loss_op,\n",
-    "          train_op=train_op,\n",
-    "          eval_metric_ops={'accuracy': acc_op})\n",
-    "\n",
-    "        return estim_specs\n",
-    "\n",
-    "\n",
-    "    def data_input_fn(filenames, batch_size=128, shuffle=False, repeat=None):\n",
-    "\n",
-    "        def parser(serialized_example):\n",
+    "    def input_fn(filenames, batch_size):\n",
+    "      \n",
+    "    \n",
+    "      def _parser(serialized_example):\n",
     "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
-    "            features = tf.parse_single_example(\n",
+    "            features = tf.io.parse_single_example(\n",
     "                serialized_example,\n",
     "                features={\n",
-    "                    'image_raw': tf.FixedLenFeature([], tf.string),\n",
-    "                    'label': tf.FixedLenFeature([], tf.int64),\n",
+    "                    'image_raw': tf.io.FixedLenFeature([img_rows * img_cols], tf.float32),                    \n",
+    "                    'label': tf.io.FixedLenFeature([], tf.int64),\n",
     "                })\n",
-    "            image = tf.decode_raw(features['image_raw'], tf.uint8)\n",
-    "            image.set_shape([28 * 28])\n",
-    "\n",
-    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
-    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
-    "            label = tf.cast(features['label'], tf.int32)\n",
+    "            \n",
+    "            image = features['image_raw']\n",
+    "            label = features['label']   \n",
+    "                \n",
+    "            return image, label\n",
+    "      \n",
+    "    \n",
+    "      def _normalize_img(image, label):\n",
+    "            \"\"\"Normalizes images\"\"\"\n",
+    "            image = tf.cast(image, tf.float32) / 255\n",
+    "            label = tf.cast(label, tf.int32)        \n",
     "            return image, label\n",
     "\n",
-    "        def _input_fn():\n",
-    "            # Import MNIST data\n",
-    "            dataset = tf.data.TFRecordDataset(filenames)\n",
+    "      def _reshape_img(image, label):\n",
+    "        image = tf.reshape(image, [28, 28, 1])\n",
+    "        # label = tf.one_hot(label, num_classes)\n",
+    "        return image, label\n",
+    "        \n",
+    "        \n",
+    "      # Import MNIST data\n",
+    "      dataset = tf.data.TFRecordDataset(filenames)\n",
+    "        \n",
+    "      # Map the parser over dataset, and batch results by up to batch_size\n",
+    "      dataset = dataset.map(_parser, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
+    "        \n",
+    "#      dataset = dataset.map(\n",
+    "#        _normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
     "\n",
-    "            # Map the parser over dataset, and batch results by up to batch_size\n",
-    "            dataset = dataset.map(parser)\n",
-    "            if shuffle:\n",
-    "                dataset = dataset.shuffle(buffer_size=128)\n",
-    "            dataset = dataset.batch(batch_size)\n",
-    "            dataset = dataset.repeat(repeat)\n",
-    "            iterator = dataset.make_one_shot_iterator()\n",
+    "        \n",
+    "      dataset = dataset.map(\n",
+    "        _reshape_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
+    "        \n",
+    "      dataset = dataset.repeat(epochs * steps_per_epoch)\n",
+    "      dataset = dataset.cache()\n",
+    "      dataset = dataset.shuffle(shuffle_size)\n",
+    "      dataset = dataset.batch(batch_size)   \n",
+    "  \n",
+    "      dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
+    "  #    dataset = strategy.experimental_distribute_dataset(dataset)         \n",
     "\n",
-    "            features, labels = iterator.get_next()\n",
+    "      return dataset\n",
+    "    \n",
+    "    model_dir = tensorboard.logdir()\n",
+    "    print('Using %s to store checkpoints.' % model_dir)\n",
+    "    \n",
+    "    # Define a Keras Model.\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(tf.keras.layers.Conv2D(32, kernel_size=kernel, padding='same',\n",
+    "                        activation='relu',\n",
+    "                         input_shape=input_shape))\n",
+    "    model.add(tf.keras.layers.Conv2D(64, kernel,  padding='same',activation='relu'))\n",
+    "    model.add(tf.keras.layers.MaxPooling2D(pool_size=pool))\n",
+    "    model.add(tf.keras.layers.Dropout(dropout))\n",
+    "    model.add(tf.keras.layers.Flatten())\n",
+    "    model.add(tf.keras.layers.Dense(128, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dropout(dropout))\n",
+    "    model.add(tf.keras.layers.Dense(num_classes))\n",
     "\n",
-    "            return features, labels\n",
-    "\n",
-    "        return _input_fn\n",
-    "\n",
-    "\n",
-    "    run_config = tf.contrib.learn.RunConfig(\n",
-    "        model_dir=tensorboard.logdir(),\n",
-    "        save_checkpoints_steps=10,\n",
-    "        save_summary_steps=5,\n",
-    "        log_step_count_steps=10)\n",
-    "\n",
-    "    hparams = tf.contrib.training.HParams(\n",
-    "        learning_rate=learning_rate, dropout_rate=dropout)\n",
-    "\n",
-    "    summary_hook = tf.train.SummarySaverHook(\n",
-    "          save_steps = run_config.save_summary_steps,\n",
-    "          scaffold= tf.train.Scaffold(),\n",
-    "          summary_op=tf.summary.merge_all())\n",
-    "\n",
-    "    mnist_estimator = tf.estimator.Estimator(\n",
-    "        model_fn=model_fn,\n",
-    "        config=run_config,\n",
-    "        params=hparams\n",
+    "    model.compile(\n",
+    "        loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "        optimizer=tf.keras.optimizers.Adam(learning_rate),\n",
+    "        metrics=['accuracy'],\n",
     "    )\n",
     "\n",
+    "    callbacks = [\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=model_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
+    "    ]\n",
     "\n",
-    "    train_input_fn = data_input_fn(train_filenames[0], batch_size=batch_size)\n",
-    "    eval_input_fn = data_input_fn(validation_filenames[0], batch_size=batch_size)\n",
-    "\n",
-    "    experiment = tf.contrib.learn.Experiment(\n",
-    "        mnist_estimator,\n",
-    "        train_input_fn=train_input_fn,\n",
-    "        eval_input_fn=eval_input_fn,\n",
-    "        train_steps=num_steps,\n",
-    "        min_eval_frequency=5,\n",
-    "        eval_hooks=[summary_hook]\n",
+    "    model.fit(input_fn(train_filenames, batch_size), \n",
+    "        verbose=0, \n",
+    "        epochs=epochs, \n",
+    "        steps_per_epoch=steps_per_epoch,\n",
+    "        validation_data=input_fn(validation_filenames, batch_size),\n",
+    "        validation_steps=validation_steps,      \n",
+    "        callbacks=callbacks\n",
     "    )\n",
     "\n",
-    "    experiment.train_and_evaluate()\n",
-    "    \n",
-    "    evaluate = mnist_estimator.evaluate(input_fn=eval_input_fn, steps=num_steps)\n",
-    "    accuracy = evaluate[\"accuracy\"]\n",
-    "    loss = evaluate[\"loss\"]\n",
-    "    \n",
-    "    return {'accuracy': accuracy, 'loss': loss}"
+    "    score = model.evaluate(input_fn(validation_filenames, batch_size), steps=1, verbose=0)\n",
+    "    print('Test loss:', score[0])\n",
+    "    print('Test accuracy:', score[1])\n",
+    "    return {'accuracy': score[1], 'loss': score[0]}        "
    ]
   },
   {
@@ -310,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -329,9 +284,16 @@
     "from hops import experiment\n",
     "from hops import hdfs\n",
     "\n",
-    "notebook = hdfs.project_path() + \"Jupyter/Parallel_Experiments/TensorFlow/grid_search/grid_search_fashion_mnist.ipynb\"\n",
+    "notebook = hdfs.project_path() + \"Jupyter/tf2/Parallel_Experiments/grid_search/grid_search_fashion_mnist.ipynb\"\n",
     "experiment.grid_search(wrapper, args_dict, optimization_key='accuracy', direction='max')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -347,7 +309,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python2"
   }
  },
  "nbformat": 4,
