--- a/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
+++ b/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
@@ -207,8 +207,8 @@
     "      # Map the parser over dataset, and batch results by up to batch_size\n",
     "      dataset = dataset.map(_parser, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
     "        \n",
-    "#      dataset = dataset.map(\n",
-    "#        _normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
+    "      dataset = dataset.map(\n",
+    "        _normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
     "\n",
     "        \n",
     "      dataset = dataset.map(\n",
@@ -220,7 +220,6 @@
     "      dataset = dataset.batch(batch_size)   \n",
     "  \n",
     "      dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
-    "  #    dataset = strategy.experimental_distribute_dataset(dataset)         \n",
     "\n",
     "      return dataset\n",
     "    \n",
