--- a/notebooks/ml/Benchmarks/benchmark.ipynb
+++ b/notebooks/ml/Benchmarks/benchmark.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This notebook can be used to benchmark performance using CPU, a single GPU or many GPUs.\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
@@ -109,10 +109,6 @@
     "    \n",
     "    num_iterations = 5000 # Number of iterations, increase to run longer\n",
     "    \n",
-    "    model = ResNet50(weights=None, input_shape=(height, width, channels), classes=num_classes)\n",
-    "        \n",
-    "    optimizer = tf.train.RMSPropOptimizer(0.2)\n",
-    "    model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
     "    \n",
     "    # Read synthetic data (can be replaced with real data)\n",
     "    def input_fn():\n",
@@ -125,19 +121,30 @@
     "    \n",
     "    tf.keras.backend.set_learning_phase(True)\n",
     "\n",
-    "    # Define DistributionStrategies and convert the Keras Model to an\n",
-    "    # Estimator that utilizes these DistributionStrateges.\n",
-    "    # Evaluator is a single worker, so using MirroredStrategy.\n",
-    "    # Training is automatically distributed on all available GPUs when using MirroredStrategy\n",
-    "    run_config = tf.estimator.RunConfig(\n",
-    "            train_distribute=tf.contrib.distribute.MirroredStrategy())\n",
-    "    keras_estimator = tf.keras.estimator.model_to_estimator(keras_model=model, \n",
-    "               config=run_config, model_dir=tensorboard.logdir())\n",
+    "    \n",
+    "    # Define distribution strategy\n",
+    "    strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
-    "    # Train and evaluate the model. Evaluation will be skipped if there is not an\n",
-    "    # \"evaluator\" job in the cluster.\n",
-    "    tf.estimator.train_and_evaluate(keras_estimator, train_spec=tf.estimator.TrainSpec(input_fn=input_fn),\n",
-    "        eval_spec=tf.estimator.EvalSpec(input_fn=input_fn))\n",
+    "\n",
+    "    with strategy.scope():\n",
+    "        model = ResNet50(weights=None, input_shape=(height, width, channels), classes=num_classes)\n",
+    "\n",
+    "        optimizer = tf.train.RMSPropOptimizer(0.2)\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
+    "\n",
+    "\n",
+    "    callbacks = [\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=model_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
+    "    ]\n",
+    "    model.fit(input_fn(), \n",
+    "        verbose=0,\n",
+    "        epochs=3, \n",
+    "        steps_per_epoch=5,\n",
+    "        validation_data=input_fn(),\n",
+    "        callbacks=callbacks\n",
+    "    )\n",
+    "    model.evaluate(input_fn())\n",
     "        "
    ]
   },
@@ -154,18 +161,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
-   "name": "pysparkkernel"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
-    "version": 2
+    "name": "ipython",
+    "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
