--- a/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_mnist_exampe.ipynb
+++ b/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_mnist_exampe.ipynb
@@ -754,8 +754,8 @@
     "      # Map the parser over dataset, and batch results by up to batch_size\n",
     "      dataset = dataset.map(_parser, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
     "        \n",
-    "#      dataset = dataset.map(\n",
-    "#        _normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
+    "      dataset = dataset.map(\n",
+    "        _normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
     "\n",
     "        \n",
     "      dataset = dataset.map(\n",
@@ -767,8 +767,7 @@
     "      dataset = dataset.batch(batch_size)   \n",
     "  \n",
     "      dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
-    "  #    dataset = strategy.experimental_distribute_dataset(dataset)         \n",
-    "\n",
+    " \n",
     "      return dataset\n",
     "    \n",
     "    model_dir = tensorboard.logdir()\n",
